# osr2mp4-rs

./: .gitignore  Cargo.toml  build-zip.rs  path.cs
src/: curves.rs  encoder.rs  helper.rs  main.rs  player.rs
src/curves/: bezier.rs  mod.rs  perfect.rs
src/graphics/: circle.rs  mod.rs  slider.rs  spinner.rs
