[package]
name = "osr2mp4-rs"
version = "0.1.0"
authors = ["Nobbele <realnobbele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
libosu = { git = "https://github.com/nobbele/libosu", default-features = false }

[profile.dev]
opt-level = 3
