[package]
name = "osr2mp4-rs"
version = "0.1.0"
authors = ["Nobbele <realnobbele@gmail.com>"]
edition = "2018"
build = "build-zip.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
glam = { version = "0.12.0", features = ["mint"] }
image = { version = "0.23.12", features = ["jpeg"] }
libosu = { version = "0.0.21", features = ["replay-data"] }

[build-dependencies]
fs_extra = "1.2.0"
zip = "0.5.9"
walkdir = "2.3.1"

[profile.dev]
opt-level = 3
